# mongo-postgres

./: Cargo.toml  README.md  notes.txt
src/: main.rs
src/model/: account.rs  account_opening.rs  branch.rs  closing_batch.rs  contact.rs  desktop_client.rs  division.rs  doctor.rs  duplicate.rs  financial_year.rs  gst_registration.rs  inventory.rs  manufacturer.rs  member.rs  mod.rs  notes.txt  patient.rs  pharma_salt.rs  pos_terminal.rs  print_template.rs  rack.rs  sale_incharge.rs  salt.rs  section.rs  tds_nature_of_payment.rs  unit.rs  vendor_item_map.rs  voucher.rs  voucher_num_seq.rs  voucher_type.rs
