[package]
name = "mongodb-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.29"
clap = { version = "4.4.6", features = ["derive"] }
mongodb = { version = "2.7.1"}
serde_json = "1.0.95"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = {version = "0.7.10", features= ["with-serde_json-1", "with-chrono-0_4"]}
gql_client = "1.0.7"
regex = "1.5.6"
uuid =  { version = "1.6.1", features = [ "v4"] }